# todo-indicator

./: .gitignore  CHANGELOG.md  MANIFEST  Makefile  README  README.md  THANKS  THANKS.md  TODO  pyproject.toml  requirements.txt  sample-todo.txt  setup.py  test_todo_indicator.py  todo-indicator  todo-indicator.py  todo.txt  todo_indicator.py
todo_indicator/: indicator.py  main.py
todo_indicator/todotxt/: item.py  list.py  test_item.py  test_list.py
todotxt/: indicator.py  item.py  list.py  test_item.py  test_list.py  test_todotxt_item.py  test_todotxt_list.py  todotxt_item.py  todotxt_list.py
